--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portofolio Tailwind CSS</title>
+    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
     <link href="src/output.css" rel="stylesheet">
+    <style>
+        .active {
+            color: #14b8a6; /* Warna ketika navbar aktif */
+        }
+    </style>
 </head>
 
 <body>
@@ -45,7 +51,7 @@
 
 
     <!-- hero section start -->
-    <section id="hero" class="pt-36">
+    <section id="home" class="pt-10" data-aos="fade-up">
         <div class="container">
             <div class="flex flex-wrap">
                 <div class="w-full self-center px-4 lg:w-1/2">
@@ -59,7 +65,7 @@
                         Saya</a>
                 </div>
                 <div class="w-full self-end px-4 lg:w-1/2">
-                    <div class="relative mt-10 lg:mt-9 lg:right-0">
+                    <div class="relative mt-4 lg:right-0">
                         <img src="src/img/reyhan-remove.png" alt="Reyhan Rizqi" class="max-w-full mx-auto">
                         <span class="absolute -bottom-0 -z-10 left-1/2 -translate-x-1/2 md:scale-125">
                             <svg width="400" height="400" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
@@ -77,7 +83,7 @@
 
 
     <!-- about section start -->
-    <section id="about" class="pt-36" pb-32>
+    <section id="about" class="pt-36" pb-32 data-aos="fade-up">
         <div class="container">
             <div class="flex flex-wrap">
                 <div class="w-full px-4 mb-10 lg:w-1/2">
@@ -119,7 +125,7 @@
     <!-- end about section -->
 
         <!-- portofolio start -->
-        <section id="portofolio" class="pt-36 pb-16 bg-slate-100">
+        <section id="portofolio" class="pt-36 pb-16 bg-slate-100" data-aos="fade-up">
             <div class="container">
                 <div class="w-full px-4">
                     <div class="max-w-xl mx-auto text-center mb-16">
@@ -173,6 +179,10 @@
          <!-- portofolio end -->
     
     <script src="dist/js/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
