--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link href="src/output.css" rel="stylesheet">
     <style>
         .active {
-            color: #14b8a6; /* Warna ketika navbar aktif */
+            color: #14b8a6;
+            /* Warna ketika navbar aktif */
         }
     </style>
 </head>
@@ -29,16 +30,20 @@
                         <span class="hamburger-line transition duration-300 ease-in-out origin-bottom-left"></span>
                     </button>
 
-                    <nav id="nav-menu" class="hidden absolute py-5 bg-white shadow-lg rounded-lg max-w-[250px] w-full right-4 top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none">
+                    <nav id="nav-menu"
+                        class="hidden absolute py-5 bg-white shadow-lg rounded-lg max-w-[250px] w-full right-4 top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none">
                         <ul class="block lg:flex">
                             <li class="group">
-                                <a href="#home" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Beranda</a>
+                                <a href="#home"
+                                    class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Beranda</a>
                             </li>
                             <li class="group">
-                                <a href="#about" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Tentang Saya</a>
+                                <a href="#about"
+                                    class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Tentang Saya</a>
                             </li>
                             <li class="group">
-                                <a href="#portofolio" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Portofolio</a>
+                                <a href="#portofolio"
+                                    class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Portofolio</a>
                             </li>
                         </ul>
                     </nav>
@@ -60,7 +65,7 @@
                     <h2 class="font-medium text-slate-500 lg:text-2xl">Mahasiswa</h2>
                     <p class="font-medium text-secondary mb-10 leading-relaxed">Teknik Informatika</p>
 
-                    <a href="#"
+                    <a href="mailto:reyhanrizqi01@gmail.com"
                         class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out">Hubungi
                         Saya</a>
                 </div>
@@ -124,65 +129,142 @@
     </section>
     <!-- end about section -->
 
-        <!-- portofolio start -->
-        <section id="portofolio" class="pt-36 pb-16 bg-slate-100" data-aos="fade-up">
-            <div class="container">
-                <div class="w-full px-4">
-                    <div class="max-w-xl mx-auto text-center mb-16">
-                        <h4 class="font-semibold text-lg text-primary mb-2">Portofolio</h4>
-                        <h2 class="font-bold text-dark text-3xl mb-4">project saya</h2>
-                        <p class="font-medium text-md text-secondary">ini adalah project yang saya lakukan selama saya kuliah.</p>
-                    </div>
-                </div>
-                <div class="w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto">
-                    <div class="mb-12 p-4 md:w-1/2">
-                        <div class="rounded-md shadow-md overflow-hidden">
-                            <img src="src/img/portofolio/WhatsApp Image 2024-06-07 at 10.03.35.jpeg" alt="project 1" width="w-full">
-                            <h3 class="font-semibold text-xl text-dark mt-5 mb-3">PROJECT KOTLIN DICODING</h3>
-                            <p class="font-medium text-base text-secondary">ini adalah project akhir kelas kotlin dicoding yang saya ikuti selama perkuliahan. Disini saya membuat daftar hero dan rincian tiap hero jujutsu kaisen dan juga tombol about yang berisi pembuatnya yaitu saya.</p>
-                        </div>
-                    </div>
-                    <div class="mb-12 p-4 md:w-1/2">
-                        <div class="rounded-md shadow-md overflow-hidden">
-                            <img src="src/img/portofolio/WhatsApp Image 2024-06-07 at 09.57.54.jpeg" alt="project 1" width="w-full">
-                            <h3 class="font-semibold text-xl text-dark mt-5 mb-3">CRUD FLUTTER</h3>
-                            <p class="font-medium text-base text-secondary">saya membuat project CRUD product dengan flutter lengkap dengan tombol add to product dan ketika di pencet add to cart di halaman cart page akan muncul product yang telah ditambahkan di cart dan total harga selain itu jika ingin menghapus product di cart juga bisa.</p>
-                        </div>
-                    </div>
-                    <div class="mb-12 p-4 md:w-1/2">
-                        <div class="rounded-md shadow-md overflow-hidden">
-                            <img src="src/img/portofolio/WhatsApp Image 2024-06-07 at 10.08.30.jpeg" alt="project 1" width="w-full">
-                            <h3 class="font-semibold text-xl text-dark mt-5 mb-3">SIMPLE KALKULATOR FLUTTER</h3>
-                            <p class="font-medium text-base text-secondary">ini adalah project simple kalkulator menggunakan flutter.</p>
-                        </div>
-                    </div>
-                    <div class="mb-12 p-4 md:w-1/2">
-                        <div class="rounded-md shadow-md overflow-hidden">
-                            <img src="src/img/portofolio/WhatsApp Image 2024-06-07 at 10.15.24.jpeg" alt="project 1" width="w-full">
-                            <h3 class="font-semibold text-xl text-dark mt-5 mb-3">API BITESHIP DENGAN JAVASCRIPT</h3>
-                            <p class="font-medium text-base text-secondary">ini adalah cek ongkir sederhana dengan api biteship. disini saya input nama barang berat,panjang,lebar,dan lain-lain.</p>
-                        </div>
-                        <div class="rounded-md shadow-md overflow-hidden">
-                            <img src="src/img/portofolio/WhatsApp Image 2024-06-07 at 15.55.51.jpeg" alt="project 1" width="w-full">
-                            <h3 class="font-semibold text-xl text-dark mt-5 mb-3">CRUD LARAVEL SIM_KAMPUS</h3>
-                            <p class="font-medium text-base text-secondary">project membuat sim kampus/pusat informasi kampus dan ada crud di tiap fitur.</p>
-                        </div>
-                        <div class="rounded-md shadow-md overflow-hidden">
-                            <img src="src/img/portofolio/WhatsApp Image 2024-06-07 at 16.06.54.jpeg" alt="project 1" width="w-full">
-                            <h3 class="font-semibold text-xl text-dark mt-5 mb-3">KALKULATOR SEGITIGA HTML,CSS DAN JAVASCRIPT</h3>
-                            <p class="font-medium text-base text-secondary">project mini course revou membuat kalkulator segitiga sederhana.</p>
-                        </div>
-                    </div>
+    <!-- portofolio start -->
+    <section id="portofolio" class="pt-36 pb-16 bg-slate-100" data-aos="fade-up">
+        <div class="container">
+            <div class="w-full px-4">
+                <div class="max-w-xl mx-auto text-center mb-16">
+                    <h4 class="font-semibold text-lg text-primary mb-2">Portofolio</h4>
+                    <h2 class="font-bold text-dark text-3xl mb-4">project saya</h2>
+                    <p class="font-medium text-md text-secondary">ini adalah project yang saya lakukan selama saya
+                        kuliah.</p>
                 </div>
             </div>
-         </section>
-         <!-- portofolio end -->
-    
+
+            <!-- lottie web start -->
+            <div class="container flex items-center">
+                <!-- Lottie animation web on the left -->
+                <div class="w-1/2 flex justify-center">
+                    <div id="lottie-animation" style="width: 400px; height: 400px;"></div>
+                </div>
+                <!-- Text on the right -->
+                <div class="max-w-xl mx-auto text-center mb-16 d-none d-lg-block"> <!-- Menambahkan margin-left -->
+                    <h4 class="font-semibold text-xl text-primary mb-100">PROJECT WEB</h4>
+                    <h4 class="font-semibold text-xl text-primary mb-100">PROJECT WEB</h4>
+                    <h4 class="font-semibold text-xl text-primary mb-100">PROJECT WEB</h4>
+                    <h4 class="font-semibold text-xl text-primary mb-100">PROJECT WEB</h4>
+                </div>
+            </div>
+            <!-- lottie web  end -->
+            <div class="container mx-auto grid grid-cols-1 md:grid-cols-2 gap-12">
+                <div class="rounded-md shadow-md overflow-hidden">
+                    <img src="src/img/portofolio/WhatsApp Image 2024-06-07 at 10.15.24.jpeg" alt="project 1" class="w-full">
+                    <h3 class="font-semibold text-xl text-dark mt-5 mb-3">API BITESHIP DENGAN JAVASCRIPT</h3>
+                    <p class="font-medium text-base text-secondary">Ini adalah cek ongkir sederhana dengan API Biteship. Di sini saya input nama barang, berat, panjang, lebar, dan lain-lain.</p>
+                </div>
+                <div class="rounded-md shadow-md overflow-hidden">
+                    <img src="src/img/portofolio/WhatsApp Image 2024-06-07 at 15.55.51.jpeg" alt="project 2" class="w-full">
+                    <h3 class="font-semibold text-xl text-dark mt-5 mb-3">CRUD LARAVEL SIM_KAMPUS</h3>
+                    <p class="font-medium text-base text-secondary">Project membuat SIM kampus/pusat informasi kampus dan ada CRUD di tiap fitur.</p>
+                </div>
+                <div class="rounded-md shadow-md overflow-hidden">
+                    <img src="src/img/portofolio/WhatsApp Image 2024-06-07 at 16.06.54.jpeg" alt="project 3" class="w-full">
+                    <h3 class="font-semibold text-xl text-dark mt-5 mb-3">KALKULATOR SEGITIGA HTML, CSS DAN JAVASCRIPT</h3>
+                    <p class="font-medium text-base text-secondary">Project mini course Revou membuat kalkulator segitiga sederhana.</p>
+                </div>
+            </div>
+        </div>
+        <br>
+        <br>
+        <br>
+
+
+        <!-- lottie MOBILE start -->
+        <div class="container flex items-center">
+            <!-- Lottie animation MOBILE on the left -->
+            <div class="w-1/2 flex justify-center">
+                <div id="lottie-animation-mobile" style="width: 500px; height: 500px;"></div>
+            </div>
+            <!-- Text on the right -->
+            <div class="max-w-xl mx-auto text-center mb-16 d-none d-lg-block"> <!-- Menambahkan margin-left -->
+                <h4 class="font-semibold text-xl text-primary mb-100">PROJECT MOBILE</h4>
+                <h4 class="font-semibold text-xl text-primary mb-100">PROJECT MOBILE</h4>
+                <h4 class="font-semibold text-xl text-primary mb-100">PROJECT MOBILE</h4>
+                <h4 class="font-semibold text-xl text-primary mb-100">PROJECT MOBILE</h4>
+            </div>
+        </div>
+        <!-- lottie MOBILE  end -->
+        <div class="w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto">
+            <div class="mb-12 p-4 md:w-1/2">
+                <div class="rounded-md shadow-md overflow-hidden">
+                    <img src="src/img/portofolio/WhatsApp Image 2024-06-07 at 10.03.35.jpeg" alt="project 1"
+                        width="w-full">
+                    <h3 class="font-semibold text-xl text-dark mt-5 mb-3">PROJECT KOTLIN DICODING</h3>
+                    <p class="font-medium text-base text-secondary">ini adalah project akhir kelas kotlin dicoding
+                        yang saya ikuti selama perkuliahan. Disini saya membuat daftar hero dan rincian tiap hero
+                        jujutsu kaisen dan juga tombol about yang berisi pembuatnya yaitu saya.</p>
+                </div>
+            </div>
+            <div class="mb-12 p-4 md:w-1/2">
+                <div class="rounded-md shadow-md overflow-hidden">
+                    <img src="src/img/portofolio/WhatsApp Image 2024-06-07 at 09.57.54.jpeg" alt="project 1"
+                        width="w-full">
+                    <h3 class="font-semibold text-xl text-dark mt-5 mb-3">CRUD FLUTTER</h3>
+                    <p class="font-medium text-base text-secondary">saya membuat project CRUD product dengan flutter
+                        lengkap dengan tombol add to product dan ketika di pencet add to cart di halaman cart page
+                        akan muncul product yang telah ditambahkan di cart dan total harga selain itu jika ingin
+                        menghapus product di cart juga bisa.</p>
+                </div>
+            </div>
+            <div class="mb-12 p-4 md:w-1/2">
+                <div class="rounded-md shadow-md overflow-hidden">
+                    <img src="src/img/portofolio/WhatsApp Image 2024-06-07 at 10.08.30.jpeg" alt="project 1"
+                        width="w-full">
+                    <h3 class="font-semibold text-xl text-dark mt-5 mb-3">SIMPLE KALKULATOR FLUTTER</h3>
+                    <p class="font-medium text-base text-secondary">ini adalah project simple kalkulator menggunakan
+                        flutter.</p>
+                </div>
+            </div>
+
+
+
+            <!--  -->
+
+        </div>
+    </section>
+    <!-- portofolio end -->
+
     <script src="dist/js/script.js"></script>
+
+    <!-- animasi up and down -->
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
     <script>
         AOS.init();
     </script>
+    <!-- animasi up and down end -->
+
+    <!-- lottiflies -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.5/lottie.min.js"></script>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    <!-- lottiflies end -->
+
+    <script>
+        var animation = lottie.loadAnimation({
+            container: document.getElementById('lottie-animation'), // ID dari elemen div
+            renderer: 'svg',
+            loop: true,
+            autoplay: true,
+            path: 'animation/Animation - 1722775358355.json' // Ganti dengan path file JSON animasi Anda
+        });
+        var animation = lottie.loadAnimation({
+            container: document.getElementById('lottie-animation-mobile'), // ID dari elemen div
+            renderer: 'svg',
+            loop: true,
+            autoplay: true,
+            path: 'animation/Animation - 1723089638371.json' // Ganti dengan path file JSON animasi Anda
+        });
+    </script>
+
 </body>
 
 </html>
