--- a/index.html
+++ b/index.html
@@ -12,10 +12,32 @@
             color: #14b8a6;
             /* Warna ketika navbar aktif */
         }
+
+        /* Media query untuk mobile */
+        @media (max-width: 768px) {
+            .flex-col-mobile {
+                flex-direction: column;
+            }
+
+            .hidden-mobile {
+                display: none;
+            }
+
+            .visible-mobile {
+                display: block;
+            }
+
+            .w-lottie-mobile {
+                width: 100%;
+                height: auto;
+            }
+        }
     </style>
+
 </head>
 
 <body>
+    <br><br><br><br><br>
     <!-- header start -->
     <header class="bg-transparent absolute top-0 left-0 w-full flex items-center z-10">
         <div class="container">
@@ -142,35 +164,42 @@
             </div>
 
             <!-- lottie web start -->
-            <div class="container flex items-center">
+            <div class="container flex flex-col lg:flex-row items-center">
                 <!-- Lottie animation web on the left -->
-                <div class="w-1/2 flex justify-center">
-                    <div id="lottie-animation" style="width: 400px; height: 400px;"></div>
+                <div class="w-full lg:w-1/2 flex justify-center">
+                    <div id="lottie-animation" class="w-lottie-mobile"></div>
                 </div>
                 <!-- Text on the right -->
-                <div class="max-w-xl mx-auto text-center mb-16 d-none d-lg-block"> <!-- Menambahkan margin-left -->
-                    <h4 class="font-semibold text-xl text-primary mb-100">PROJECT WEB</h4>
-                    <h4 class="font-semibold text-xl text-primary mb-100">PROJECT WEB</h4>
-                    <h4 class="font-semibold text-xl text-primary mb-100">PROJECT WEB</h4>
-                    <h4 class="font-semibold text-xl text-primary mb-100">PROJECT WEB</h4>
+                <div class="w-full lg:w-1/2 text-center lg:text-left">
+                    <h4 class="font-semibold text-xl text-primary mb-4">PROJECT WEB</h4>
+                    <h4 class="font-semibold text-xl text-primary mb-4">PROJECT WEB</h4>
+                    <h4 class="font-semibold text-xl text-primary mb-4">PROJECT WEB</h4>
+                    <h4 class="font-semibold text-xl text-primary mb-4">PROJECT WEB</h4>
                 </div>
             </div>
-            <!-- lottie web  end -->
+            <!-- lottie web end -->
             <div class="container mx-auto grid grid-cols-1 md:grid-cols-2 gap-12">
                 <div class="rounded-md shadow-md overflow-hidden">
-                    <img src="src/img/portofolio/WhatsApp Image 2024-06-07 at 10.15.24.jpeg" alt="project 1" class="w-full">
+                    <img src="src/img/portofolio/WhatsApp Image 2024-06-07 at 10.15.24.jpeg" alt="project 1"
+                        class="w-full">
                     <h3 class="font-semibold text-xl text-dark mt-5 mb-3">API BITESHIP DENGAN JAVASCRIPT</h3>
-                    <p class="font-medium text-base text-secondary">Ini adalah cek ongkir sederhana dengan API Biteship. Di sini saya input nama barang, berat, panjang, lebar, dan lain-lain.</p>
+                    <p class="font-medium text-base text-secondary">Ini adalah cek ongkir sederhana dengan API Biteship.
+                        Di sini saya input nama barang, berat, panjang, lebar, dan lain-lain.</p>
                 </div>
                 <div class="rounded-md shadow-md overflow-hidden">
-                    <img src="src/img/portofolio/WhatsApp Image 2024-06-07 at 15.55.51.jpeg" alt="project 2" class="w-full">
+                    <img src="src/img/portofolio/WhatsApp Image 2024-06-07 at 15.55.51.jpeg" alt="project 2"
+                        class="w-full">
                     <h3 class="font-semibold text-xl text-dark mt-5 mb-3">CRUD LARAVEL SIM_KAMPUS</h3>
-                    <p class="font-medium text-base text-secondary">Project membuat SIM kampus/pusat informasi kampus dan ada CRUD di tiap fitur.</p>
+                    <p class="font-medium text-base text-secondary">Project membuat SIM kampus/pusat informasi kampus
+                        dan ada CRUD di tiap fitur.</p>
                 </div>
                 <div class="rounded-md shadow-md overflow-hidden">
-                    <img src="src/img/portofolio/WhatsApp Image 2024-06-07 at 16.06.54.jpeg" alt="project 3" class="w-full">
-                    <h3 class="font-semibold text-xl text-dark mt-5 mb-3">KALKULATOR SEGITIGA HTML, CSS DAN JAVASCRIPT</h3>
-                    <p class="font-medium text-base text-secondary">Project mini course Revou membuat kalkulator segitiga sederhana.</p>
+                    <img src="src/img/portofolio/WhatsApp Image 2024-06-07 at 16.06.54.jpeg" alt="project 3"
+                        class="w-full">
+                    <h3 class="font-semibold text-xl text-dark mt-5 mb-3">KALKULATOR SEGITIGA HTML, CSS DAN JAVASCRIPT
+                    </h3>
+                    <p class="font-medium text-base text-secondary">Project mini course Revou membuat kalkulator
+                        segitiga sederhana.</p>
                 </div>
             </div>
         </div>
@@ -180,20 +209,20 @@
 
 
         <!-- lottie MOBILE start -->
-        <div class="container flex items-center">
+        <div class="container flex flex-col lg:flex-row items-center mt-16">
             <!-- Lottie animation MOBILE on the left -->
-            <div class="w-1/2 flex justify-center">
-                <div id="lottie-animation-mobile" style="width: 500px; height: 500px;"></div>
+            <div class="w-full lg:w-1/2 flex justify-center">
+                <div id="lottie-animation-mobile" class="w-lottie-mobile"></div>
             </div>
             <!-- Text on the right -->
-            <div class="max-w-xl mx-auto text-center mb-16 d-none d-lg-block"> <!-- Menambahkan margin-left -->
-                <h4 class="font-semibold text-xl text-primary mb-100">PROJECT MOBILE</h4>
-                <h4 class="font-semibold text-xl text-primary mb-100">PROJECT MOBILE</h4>
-                <h4 class="font-semibold text-xl text-primary mb-100">PROJECT MOBILE</h4>
-                <h4 class="font-semibold text-xl text-primary mb-100">PROJECT MOBILE</h4>
+            <div class="w-full lg:w-1/2 text-center lg:text-left">
+                <h4 class="font-semibold text-xl text-primary mb-4">PROJECT MOBILE</h4>
+                <h4 class="font-semibold text-xl text-primary mb-4">PROJECT MOBILE</h4>
+                <h4 class="font-semibold text-xl text-primary mb-4">PROJECT MOBILE</h4>
+                <h4 class="font-semibold text-xl text-primary mb-4">PROJECT MOBILE</h4>
             </div>
         </div>
-        <!-- lottie MOBILE  end -->
+        <!-- lottie MOBILE end -->
         <div class="w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto">
             <div class="mb-12 p-4 md:w-1/2">
                 <div class="rounded-md shadow-md overflow-hidden">
